--- a/ChartJs.Blazor/Charts/_ViewImports.razor
+++ b/ChartJs.Blazor/Charts/_ViewImports.razor
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Web
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS
 @using Microsoft.JSInterop
